@@ -1,3 +1,6 @@
+Version 2013072602 Fri Jul 26 13:31:00 CEST 2013
++ New theme: moonwalkers
+
 Version 2013072601 Fri Jul 26 00:59:09 CEST 2013
 + New theme: playing_cards
 
